update:修复由于高版本JDK删除sun.misc.*导致的程序报错的BUG